# windows-capture

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: python.yml  python_release.yml  python_wheel.yml  rust.yml
src/: encoder.rs
windows-cap-python/: Cargo.toml  pyproject.toml
windows-cap-python/src/: lib.rs
windows-cap-python/windows_cap/: __init__.py
windows-cap-python/windows_capture/: __init__.py
windows-capture-python/: Cargo.toml  pyproject.toml
