[package]
name = "windows-cap-python"
version = "2.0.0-alpha.7"
authors = ["NiiightmareXD"]
edition = "2024"
description = "Fastest Windows Screen Capture Library For Python 🔥"
readme = "README-Python.md"
repository = "https://github.com/NiiightmareXD/windows-capture/tree/main/windows-capture-python"
license = "MIT"
keywords = ["screen", "capture", "screenshot", "graphics", "windows"]
categories = [
    "os::windows-apis",
    "api-bindings",
    "graphics",
    "gui",
    "multimedia",
]

[lib]
name = "windows_capture"
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
numpy = "0.26"
pyo3 = { version = "0.26", features = [ "extension-module", ] }
rayon = "1.11"
thiserror = "2.0"
windows = "0.62"
windows-capture = { path = ".." }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
strip = true
