[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "windows-capture"
version = "1.6.0-alpha.1"
description = "Fastest Windows Screen Capture Library For Python 🔥"
readme = "README-Python.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "NiiightmareXD" }]
keywords = ["screen", "capture", "screenshot", "graphics", "windows"]
dependencies = ["numpy", "opencv-python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Video :: Capture",
]

[tool.maturin]
features = ["pyo3/extension-module"]
manylinux = "off"
rustc-extra-args = ["-C", "target-feature=+sse2,+sse4.1,+avx,+avx2,+fma", "-C", "codegen-units=1", "-C", "link-arg=/OPT:REF", "-C", "link-arg=/OPT:ICF"]
strip = true
lto = true
